--- a/part-1/01-introduction/makefile
+++ b/part-1/01-introduction/makefile
@@ -4,18 +4,18 @@
 CXX = $(shell fltk-config --cxx)
 
 # Save lib path in variable
-LIB=../lib
+LIB=../../lib
 
 # Let FLTK set the system specific compiler flags
 CXXFLAGS = $(shell fltk-config --cxxflags) -g -std=c++14 -I $(LIB)
 
 # Set app name
-FNAME=program_01_02
+FNAME=exercise_01_06
 
 # Set dependencies needed to compile
-# HEADERS = 
-# DEPS = 
+HEADERS = $(LIB)/analysis.hpp
+DEPS = $(LIB)/analysis.cpp
 
 
 app:
-	$(CXX) $(CXXFLAGS) $(FNAME).cpp -o $(FNAME)
+	$(CXX) $(CXXFLAGS) $(DEPS) $(FNAME).cpp -o $(FNAME)
