--- a/part-2/03-elem-data-struc/makefile
+++ b/part-2/03-elem-data-struc/makefile
@@ -13,8 +13,8 @@ CXXFLAGS = $(shell fltk-config --cxxflags) -g -std=c++14 -I $(LIB)
 FNAME=program_03_20
 
 # Set dependencies needed to compile
-HEADERS = $(LIB)/analysis.hpp $(LIB)/list.hpp
-DEPS = $(LIB)/analysis.cpp $(LIB)/list.cpp
+HEADERS = $(LIB)/analysis.hpp $(LIB)/list.hpp Point.hpp
+DEPS = $(LIB)/analysis.cpp $(LIB)/list.cpp 
 
 
 app:
